--- a/Prompt/Prompt.csproj
+++ b/Prompt/Prompt.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper">
+      <HintPath>..\packages\Dapper.1.38\lib\net45\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -50,6 +53,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Lib\ActorHelper.cs" />
+    <Compile Include="Lib\BusinessHelper.cs" />
+    <Compile Include="Lib\CountryHelper.cs" />
+    <Compile Include="Lib\DirectorHelper.cs" />
+    <Compile Include="Lib\Extensions.cs" />
+    <Compile Include="Lib\GenreHelper.cs" />
+    <Compile Include="Lib\RatingHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
