--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Entities\DimGenre.cs" />
     <Compile Include="Entities\DimMovie.cs" />
     <Compile Include="Entities\DimYear.cs" />
+    <Compile Include="Entities\Enumerations.cs" />
     <Compile Include="Entities\FactRating.cs" />
     <Compile Include="Entities\FactSale.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
