--- a/Prompt/App.config
+++ b/Prompt/App.config
@@ -8,6 +8,9 @@
     <clear />
     <add name="conn" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MovieDB;Persist Security Info=True;User ID=test;Password=test" />
   </connectionStrings>
+  <appSettings>
+    <add key="folder" value="C:\Users\danie_000\Downloads\bi" />
+  </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
